--- a/index.html
+++ b/index.html
@@ -16,21 +16,44 @@
 </head>
 <body>
 
-  Learn to code by watching others
+  <div class="form">
+    <div class="form__text-group">
+      <h1 class="form__heading">
+        Learn to code by watching others
+      </h1>
+      <p class="form__info">
+        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
+        but understanding how developers think is invaluable. 
+      </p>
+    </div>
 
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
+    <div class="form__action-group">
+      <h3 class="form__offer">
+        Try it free 7 days then $20/mo. thereafter
+      </h3>
 
-  Try it free 7 days then $20/mo. thereafter
+      <form class="form__input-group">
 
-  First Name 
-  Last Name 
-  Email Address
-  Password
+        <input type="text" name="name" id="name" class="form__input" placeholder=" First Name">
+        <input type="text" name="name" id="name" class="form__input" placeholder=" Last Name">
+        <input type="email" name="name" id="name" class="form__input" placeholder="Email Address">
+        <input type="password" name="name" id="name" class="form__input" placeholder="  Password">
 
-  Claim your free trial 
+        <button type="submit" class="form__cta">
+          Claim your free trial 
+        </button>
 
-  By clicking the button, you are agreeing to our Terms and Services
+        <p class="form__notice">
+          By clicking the button, you are agreeing to our <span class="form__alert-msg">Terms and Services</span>
+        </p>
+      </form>
+    </div>
+
+  </div>
+
+  
+
+
   
   <footer>
     <p class="attribution">
