--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
       <form class="form__input-group">
 
-        <input type="text" name="name" id="name" class="form__input" placeholder=" First Name">
-        <input type="text" name="name" id="name" class="form__input" placeholder=" Last Name">
-        <input type="email" name="name" id="name" class="form__input" placeholder="Email Address">
-        <input type="password" name="name" id="name" class="form__input" placeholder="  Password">
+        <input aria-label="first name" type="text" name="name" id="name" class="form__input" placeholder=" First Name">
+        <input aria-label="last name" type="text" name="name" id="surname" class="form__input" placeholder=" Last Name">
+        <input aria-label="email" type="email" name="name" id="email" class="form__input" placeholder="Email Address">
+        <input aria-label="password" type="password" name="password" id="password" class="form__input" placeholder="  Password">
 
         <button type="submit" class="form__cta">
           Claim your free trial 
