--- a/index.html
+++ b/index.html
@@ -1,66 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet" />
 
-  <link rel="stylesheet" href="style.css">
-  
+  <link rel="stylesheet" href="style.css" />
+
   <title>Frontend Mentor | Intro component with sign up form</title>
-
 </head>
+
 <body>
-
   <div class="container">
-
-  <div class="form">
-    <div class="form__text-group">
-      <h1 class="form__heading">
-        Learn to code by watching others
-      </h1>
-      <p class="form__info">
-        See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-        but understanding how developers think is invaluable. 
-      </p>
-    </div>
-
-    <div class="form__action-group">
-      <h3 class="form__offer">
-        Try it free 7 days <span class="form__small-text"> then $20/mo. thereafter </span>
-      </h3>
-
-      <form class="form__input-group" id="form">
-
-        <input aria-label="first name" type="text" name="name" id="first_name" class="form__input" placeholder=" First Name" required>
-        <input aria-label="last name" type="text" name="name" id="last_name" class="form__input" placeholder=" Last Name" required>
-        <input aria-label="email" type="email" name="name" id="email" class="form__input" placeholder="Email Address" required>
-        <input aria-label="password" type="password" name="password" id="password" class="form__input" placeholder="  Password" required>
-
-        <button type="submit" class="form__cta" id="submit-btn">
-          Claim your free trial 
-        </button>
-
-        <p class="form__notice">
-          By clicking the button, you are agreeing to our <span class="form__alert-msg">Terms and Services</span>
+    <div class="form">
+      <div class="form__text-group">
+        <h1 class="form__heading">
+          Learn to code by watching others
+        </h1>
+        <p class="form__info">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think
+          is invaluable.
         </p>
-      </form>
+      </div>
+
+      <div class="form__action-group">
+        <h3 class="form__offer">
+          Try it free 7 days
+          <span class="form__small-text"> then $20/mo. thereafter </span>
+        </h3>
+
+        <form class="form__input-group" id="form">
+          <fieldset>
+            <input aria-label="first name" type="text" name="name" id="first_name" class="form__input"
+              placeholder=" First Name" data-field="name" />
+            <span class="form__error">First Name cannot be empty</span>
+          </fieldset>
+
+          <fieldset>
+            <input aria-label="last name" type="text" name="name" id="last_name" class="form__input"
+              placeholder=" Last Name" data-field="last name" />
+            <span class="form__error">Last Name cannot be empty</span>
+          </fieldset>
+          <fieldset>
+            <input aria-label="email" type="email" name="name" id="email" class="form__input"
+              placeholder="Email Address" data-field="email" />
+            <span class="form__error">Looks like this is not an email</span>
+          </fieldset>
+          <fieldset>
+            <input aria-label="password" type="password" name="password" id="password" class="form__input"
+              placeholder="  Password" data-field="password" />
+            <span class="form__error">Password cannot be empty</span>
+          </fieldset>
+
+          <button type="submit" class="form__cta" id="submit-btn">
+            Claim your free trial
+          </button>
+
+          <p class="form__notice">
+            By clicking the button, you are agreeing to our
+            <span class="form__alert-msg">Terms and Services</span>
+          </p>
+        </form>
+      </div>
     </div>
-
   </div>
-
-  
-
-
-</div>
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="https://www.frontendmentor.io/profile/madhusudanbabar">krypton</a>.
+      Challenge by
+      <a href="https://www.frontendmentor.io/challenges/intro-component-with-signup-form-5cf91bd49edda32581d28fd1"
+        target="_blank">Frontend Mentor</a>. Coded by
+      <a href="https://www.frontendmentor.io/profile/madhusudanbabar">krypton</a>.
     </p>
   </footer>
 </body>
 <script src="./app.js"></script>
+
 </html>
